CIMSSC-1: Add support for multiple campaigns